--- a/css/styleAdmin2.css
+++ b/css/styleAdmin2.css
@@ -9,10 +9,11 @@
 }
 
 :root {
-  --main-color: #3d5af1;
-  --main-color-dark: #3651d4;
-  --main-color-light: #5872f5;
+  --main-color: #28a745;
+  --main-color-dark: #208036;
+  --main-color-light: #3bc45b;
   --text-color: #cfcde7;
+  --box-shadown-card-body:  rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 body {
@@ -30,6 +31,38 @@ a {
 
 ul {
   list-style: none;
+}
+
+.card-header{
+  background-color: #fff;
+}
+
+.title-control{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem ;
+}
+
+.title-control button{
+  border: none;
+  background-color: var(--main-color);
+  color: #fff;
+  font-size: 1rem;
+  padding: .5rem 1.5rem;
+  border-radius: .5rem;
+  font-weight: 500;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  margin: 0;
+}
+
+.title-control button:hover{
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  background-color: var(--main-color-dark);
+}
+
+.title-control h3{
+  font-weight: 800;
 }
 
 nav {
@@ -376,7 +409,7 @@ main {
     color: #1f2027;
     display: flex;
     flex-direction: column;
-    background-color: rgb(208, 223, 214);
+    background-color: rgb(222, 240, 248);
   }
   
   /* main h1 {
@@ -402,12 +435,15 @@ main {
     align-items: center;
     justify-content: space-between;
     max-height: 100px;
-    padding: 1rem 2rem;
+    padding: 0.5rem 2rem;
    
 }
 
 .nav-main h2{
     color: #666;
+    font-size: 1.4rem;
+    font-weight: 600;
+    margin: 0;
 }
 
 .nav-main .admin_info{
@@ -430,8 +466,8 @@ main {
 
 
 .nav-main img{
-    max-width: 40px;
-    border-radius: 10%;
+    max-width: 30px;
+    border-radius: 15%;
     
 }
 
@@ -455,7 +491,9 @@ main {
     border-bottom: .1rem solid #c5c3c3;
   }
 
-  .nav-main .dropdown a:hover {background-color: #ddd;}
+  .nav-main .dropdown a:hover
+   {background-color: #ddd;}
+
   .nav-main .show {display: block;}
 
 
@@ -567,6 +605,11 @@ body.shrink .statistical .box{
 
 .tab-chart .col-md-12{
     padding: 1rem;
+   
+}
+
+.tab-chart .card{
+  border-radius: 5px;
 }
 
 .tab-chart .card-body{
@@ -579,5 +622,431 @@ body.shrink .statistical .box{
     max-height: 300px;
     object-fit: cover;
 }
+
+.tab-chart .card-header,
+.tab-history-order .card-header,
+.tab-product-order .card-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.tab-chart .card-header h5{
+  color: #666;
+  font-size: 1rem;
+  margin: 0;
+}
+.tab-history-order .card-header input,
+.tab-chart .card-header input[type=date],
+.tab-product-order .card-header input{
+  color: #666;
+  font-size: .8rem;
+  padding: .3rem .5rem;
+  border-radius: 10px;
+  border: .2rem solid #ececec ;
+}
+
+.tab-history-order .card-header button,
+.tab-product-order .card-header button{
+  color: #fff;
+  background-color: var(--main-color);
+  font-size: 1rem;
+  padding: 0.2rem 1rem;
+  border: none;
+  border-radius: .2rem;
+  margin-left: 1rem;
+  transition: background-color 1s;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.tab-chart .card-header input:focus,
+.tab-history-order .card-header input:focus{
+
+  outline: none !important;
+}
+
+table{
+  width: 100%;
+}
+
+.tab-form .card,
+.tab-history-order .card{
+  background-color: rgb(222, 240, 248);
+  border: none !important;
+}
+
+
+.tab-history-order table th,
+.tab-product-order table th{
+  border-bottom: .2rem solid #ececec;
+  padding: .5rem 0;
+  color: #333;
+}
+
+.tab-history-order td,
+.tab-product-order td{
+  font-size: 1rem;
+  color: #555;
+  padding: .5rem 0;
+  border-bottom: .1rem solid #ececec;
+  cursor: pointer;
+}
+
+.tab-history-order table td:last-child,
+.tab-product-order table td:last-child{
+  font-weight: 500;
+  color: #28a745;
+}
+
+.td-product{
+  display: flex;
+align-items: center;
+  justify-content: start;
+  gap: 1rem;
+  
+}
+.tab-product-order td a,
+.tab-history-order td a,
+.td-product a{
+  font-size: 1rem;
+  font-weight: 500;
+  color:  #28a745;
+}
+
+.td-product span{
+  font-size: .9rem;
+}
+
+.td-product img,
+.tab-history-order table img{
+  max-width: 3rem;
+}
+.tab-history-order .card-footer,
+.tab-history-order .card-header{
+  background-color: #fff;
+  border-radius: .5rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  margin-top: .5rem;
+}
+
+.tab-history-order .card-header button{
+  color: #fff;
+  background-color: var(--main-color);
+  font-size: 1rem;
+  padding: 0.2rem 1rem;
+  border: none;
+  border-radius: .2rem;
+  margin-left: 1rem;
+  transition: background-color 1s;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.tab-history-order .card-header button:hover{
+  background-color: var(--main-color-dark);
+}
+
+.tab-form .card-body,
+
+.tab-history-order .card-body{
+  margin-top: 1rem;
+  background-color: #fff;
+  border-radius: .5rem;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+
+.tab-product-order table{
+  width: 100%;
+}
+
+.tab-product-order img{
+  max-width: 3rem;
+}
+
+.control-list{
+  background-color:#fff;
+  padding: 0.5rem 1rem 1rem 1rem;
+  border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.tab-list .card{
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 1rem;
+}
+
+.control-list th{
+  font-size: 1rem;
+  padding: 0.3rem 0;
+  color: #444;
+ 
+}
+
+.control-list td{
+  align-items: center;
+  vertical-align: middle;
+  margin: auto;
+  
+}
+
+.control-list select{
+  border: .15rem solid #ececec ;
+  background-color: #fff;
+  font-size: 1rem;
+  padding-right: 1rem;
+  border-radius: .5rem;
+  color: #666;
+  width: 95%;
+}
+.control-list select:focus{
+  border: .15rem solid #ececec ;
+  outline: none !important;
+  box-shadow: none;
+}
+
+.control-list button{
+  border: none;
+  background-color: var(--main-color);
+  border-radius: .5rem;
+  font-size: 1rem;
+  font-weight: 500;
+  padding: .3rem 1rem;
+  color: #fff;
+}
+
+.control-list button:hover{
+  background-color: var(--main-color-dark);
+}
+
+.tab-list .form-group,
+.search-box{
+  display: flex !important;
+  align-items: center !important;
+  position: relative !important;
+  margin-bottom: 0;
+}
+
+.search-box input{
+  border: none;
+  background-color: #fcf6f6;
+  font-size: 1rem;
+  padding: .5rem 1rem .5rem 2.5rem;
+  border-radius: .5rem;
+  color: #666;
+  width: 95%;
+}
+ .search-box input:focus{
+   border: none;
+   outline: none;
+ }
+
+.search-box i{
+  position: absolute;
+  color: #666;
+  left: .5rem;
+}
+
+
+.tab-list .card-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+}
+
+.tab-list .card-header h5{
+  margin: 0;
+  font-size: 1.2rem;
+  color:  #333;
+}
+
+.tab-list .card-body table th{
+  border-bottom: .2rem solid #ececec;
+  padding: .5rem 0;
+}
+
+
+.tab-list .card-body table td{
+  border-bottom: .1rem solid #ececec;
+  padding: .3rem 0;
+}
+
+.pagination{
+  display: flex;
+  align-items: center;
+}
+
+.pagination label{
+  font-size: 1rem;
+  font-weight: 500;
+  color: #333;  
+}
+
+.pagination select{
+  width: 10rem;
+  max-width: 10rem;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #333;
+  padding: .5rem .5rem;
+  margin-left: .5rem;
+  border: .2rem solid #ececec;
+  border-radius: .5rem;
+}
+
+.pagination .page-box ul{
+  display: flex;
+  margin: 0;
+  margin-left: 1rem;
+  gap: .2rem;
+}
+
+.pagination .page-box ul a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color:#f7f5f5;
+  width: 2rem;
+  height: 2rem;
+  font-size: .8rem;
+  color: #333;
+  font-weight: 600;
+  border-radius: .5rem;
+  
+}
+
+.pagination .page-box ul a:hover{
+  background-color: var(--main-color-light);
+  color:#fff;
+}
+
+.pagination .page-box ul a.active{
+  background-color: var(--main-color-light);
+  color: #fff;
+}
+
+.status-ena{
+  background-color: var(--main-color-light);
+  color: #fff;
+  font-size: .8rem;
+  padding: 0.2rem .5rem;
+  border-radius: 1rem;
+}
+.status-disa{
+  background-color: rgb(238, 69, 69);
+  color: #fff;
+  font-size: .8rem;
+  padding: 0.2rem .5rem;
+  border-radius: 1rem;
+}
+
+.control-td{
+  position: relative;
+}
+
+.control-td>a{
+  color: #333;
+}
+.control-td>a:hover{
+  color: var(--main-color-light);
+}
+
+.droplist-btn{
+  color:#333;
+  font-weight: 500;
+}
+.droplist-btn:hover{
+  color: var(--main-color-light);
+  position: relative;
+}
+
+
+
+.dropdown-table {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #ececec;
+    min-width: 160px;
+    overflow: auto;
+   
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 100;
+  }
+
+  
+  .dropdown-table a{
+    color: #666;
+    padding: .5rem;
+    text-decoration: none;
+    display: block;
+    border-bottom: .1rem solid #c5c3c3;
+  }
+  .dropdown-table a:hover{
+    color: var(--main-color-light);
+  }
+  .dropdown-table.show{
+    display: block;
+  }
+
+  
+  /* form */
+
+  .tab-form .card-header{
+    border-radius: .5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  }
+
+  .tab-form .card-header h5{
+    margin: 0;
+  }
+
+  .tab-form .card-header button{
+    background-color: var(--main-color-light);
+    border-radius: .5rem;
+    border: none;
+    padding: .5rem 1rem;
+    color: #fff;
+    font-weight: 500;
+  }
+
+  .tab-form .card-body{
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  }
+
+  .tab-form .form-group img{
+    max-width:15rem;
+  }
+
+  .tab-form input:focus,
+  .tab-form textarea:focus{
+    outline: none;
+    box-shadow: none;
+    border-color: #ececec;
+  }
+
+
+
+  .tab-form .card-footer{
+    margin-top: 1rem;
+    background-color: #fff;
+    border-radius: .5rem;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: .5rem;
+  }
+
+  
+
+
+
+
+
 
 
